@@ -1,12 +1,35 @@
 
-# ICS4U - CPT: Data Interaction and Visualization
+# IMDb Program Clone
 
-Click [here](https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset) for the link to this dataset.
+![image](https://user-images.githubusercontent.com/42254833/129419184-fcc527f1-534f-4ac3-a30e-d3a108b7a0dd.png)
 
-Movies have been a part of society for over a century and still remain a vital part of humanities history. Whether based on historical events or a fictional world beyond our wildest dreams, movies often embody its creators' creativity and beliefs and provide its viewers with a meaningful message by the end of it. 
+## Description
 
-As a result, I will be basing my dataset on the statistics and information available on the IMDb site, which contains nearly every movie produced in the past century. This data set contains information such as the movie title, genres, language, country of origin, year released, director, and short descriptions. Needless to say, this data set extensively covers most, if not all, movies that have ever been released, as it contains over 800,000 entries. The link for the data set can be found at the link above. 
+This is a program that was written to mimic the site [IMDb](https://www.imdb.com/). Written in Java using the JavaFx library. Designed to allow users to view different movies and different snippets of info for that movie. 
 
-Along with the historical significance of films, my own personal experience with movies is what made me want to base my dataset off films. As a child, going to the movie theatre with my dad, would be the current day equivalent of being gifted a new phone. In fact, I remember the first time going to the theatre with my dad very vividly as if it was yesterday. Iron Man 3, had just been released and the thought of watching it didn't even cross my mind. Moreover, it was even a school night, so the idea of going anywhere at 8 pm seemed like a ridiculous thought at the time. Nevertheless, my dad surprised me with movie tickets last minute, and he and I had a wonderful experience. It was these moments in my life that made me so fond of movies. As a result, this data set allowed me to explore my love for movies even further.
+Features include: searching for movies, adding movies to a completed list, adding movies to a plan to watch list, view statistics of the user's profile, and so on.
 
-[Demo Video](https://youtu.be/CjusbXR5A48)
+Other features include viewing details about a movie such as it's rating on IMDb, description, duration, director, etc.
+
+Click [here](https://www.kaggle.com/stefanoleone992/imdb-extensive-dataset) for the link to the dataset used for this project.
+
+## Installation (using VS Code)
+
+1. Download the JavaFx SDK [here](https://gluonhq.com/products/javafx/)
+2. In VS Code add all the reference libraries for this project by navigating to the lib folder from the JavaFx SDK
+3. Try to run the main.java file and in the launch.json file add this line at the end of the line with the project name
+
+```
+"vmArgs": "--module-path /Users/<user>/<pathtojavafx>/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml",
+```
+
+4. Run the main.java file
+
+## Usage
+
+Screenshots of programs
+
+![image](https://user-images.githubusercontent.com/42254833/129419902-74d3999f-37ce-4c5b-b4a4-5585974b143e.png)
+![image](https://user-images.githubusercontent.com/42254833/129419943-10329346-0820-47a8-951d-99e8cc120e40.png)
+![image](https://user-images.githubusercontent.com/42254833/129419998-b911f538-6d85-4da0-a320-35bc5d5f4018.png)
+![image](https://user-images.githubusercontent.com/42254833/129420020-ed964ca3-41ab-4708-8ad5-a258e2d9a06b.png)
